--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "lint": "next lint && tsc --noEmit",
+    "build": "npm test && next build && npm run build-cms",
     "start": "next start",
-    "lint": "next lint",
-    "test": "NODE_ENV=test jest",
-    "test-watch": "jest --watch",
+    "cms": "sanity dev",
+    "build-cms": "sanity build public/cms -y",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o public/storybook --disable-telemetry",
+    "chromatic": "npx chromatic --project-token=a375665afc0f",
+    "create-dialog": "sanity exec ./scripts/create/create-dialog.ts",
+    "create-hero": "sanity exec ./scripts/create/create-hero.ts",
+    "create-module": "sanity exec ./scripts/create/create-module.ts",
+    "create-page": "sanity exec ./scripts/create/create-page.ts",
+    "create-static-form": "sanity exec ./scripts/create/create-static-form.ts",
+    "test": "NODE_ENV=test jest",
+    "test-watch": "jest --watch"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.7",
@@ -34,6 +42,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/dompurify": "^2.4.0",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -41,6 +50,7 @@
     "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
     "dompurify": "^2.4.1",
+    "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "formik": "^2.2.9",
@@ -61,7 +71,7 @@
     "react-gtm-module": "^2.0.11",
     "react-query": "^3.39.2",
     "reakit": "^1.3.11",
-    "sanity": "^3.2.0",
+    "sanity": "^3.2.1",
     "sanity-plugin-cloudinary": "^1.0.1",
     "sanity-plugin-mux-input": "^2.0.4",
     "styled-components": "^5.3.6",
