--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/tinycolor2": "^1.4.3",
     "@vercel/og": "^0.0.21",
     "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
