--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/papaparse": "^5.3.7",
     "babel-loader": "^8.3.0",
+    "enquirer": "^2.3.6",
     "eslint-plugin-storybook": "^0.6.8",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
