--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "reakit": "^1.3.11",
     "sanity": "^3.2.5",
     "sanity-plugin-cloudinary": "^1.0.1",
+    "sanity-plugin-media": "^2.0.4",
     "sanity-plugin-mux-input": "2.0.8",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
