--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "sanity-plugin-cloudinary": "^1.0.1",
     "sanity-plugin-media": "^2.0.4",
     "sanity-plugin-mux-input": "2.0.8",
+    "storybook-addon-next-router": "^4.0.2",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "tailwindcss": "^3.2.4",
