--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
+    "@mux/mux-player-react": "^1.7.1",
     "@next/font": "13.0.7",
     "@portabletext/react": "^2.0.0",
     "@radix-ui/react-dialog": "^1.0.2",
@@ -47,6 +48,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/tinycolor2": "^1.4.3",
+    "@u-wave/react-vimeo": "^0.9.10",
     "@vercel/og": "^0.0.21",
     "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
@@ -57,19 +59,18 @@
     "formik": "^2.2.9",
     "get-youtube-id": "^1.0.1",
     "groq": "^2.33.2",
-    "hls.js": "^1.2.9",
     "html2canvas": "^1.4.1",
     "next": "13.1.1",
     "next-sanity": "^4.0.4",
     "next-seo": "^5.15.0",
     "papaparse": "^5.3.2",
     "picosanity": "^4.0.0",
-    "plyr": "^3.7.3",
     "postcss": "^8.4.20",
     "postcss-selector-parser": "^6.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-lite-youtube-embed": "^2.3.52",
     "react-query": "^3.39.2",
     "reakit": "^1.3.11",
     "sanity": "^3.2.6",
