--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "18.0.9",
     "@types/tinycolor2": "^1.4.3",
     "@u-wave/react-vimeo": "^0.9.10",
+    "@vectopus/atlas-icons-react": "^0.0.7",
     "@vercel/og": "^0.0.21",
     "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
