--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "chromatic": "npx chromatic --project-token=a375665afc0f",
     "create-dialog": "sanity exec ./scripts/create/create-dialog.ts",
     "create-hero": "sanity exec ./scripts/create/create-hero.ts",
-    "create-page": "sanity exec ./cli/create-page",
-    "create-module": "sanity exec ./cli/create-module",
+    "create-page": "sanity exec ./cli/create-page -- --write",
+    "create-module": "sanity exec ./cli/create-module -- --write",
     "test-cli": "NODE_ENV=test npx jest ./cli/ ",
     "create-static-form": "sanity exec ./scripts/create/create-static-form.ts",
     "test": "NODE_ENV=test jest",
