--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build-storybook": "build-storybook -o public/storybook --disable-telemetry",
     "chromatic": "npx chromatic --project-token=a375665afc0f",
     "create-dialog": "sanity exec ./scripts/create/create-dialog.ts",
-    "create-hero": "sanity exec ./scripts/create/create-hero.ts",
     "create-page": "sanity exec ./cli/create-page -- --write",
     "create-module": "sanity exec ./cli/create-module -- --write",
+    "create-hero": "sanity exec ./cli/create-module -- --write --hero",
     "test-cli": "NODE_ENV=test npx jest ./cli/ ",
     "create-static-form": "sanity exec ./scripts/create/create-static-form.ts",
     "test": "NODE_ENV=test jest",
