--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "studio/", "scripts/**/*.tsx", "scripts/**/*.ts"]
+  "exclude": ["node_modules", "studio/"]
 }
