--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
-    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-styling": "^0.3.2",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
@@ -106,6 +106,7 @@
     "eslint-plugin-storybook": "^0.6.8",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "next-router-mock": "^0.8.0"
+    "next-router-mock": "^0.8.0",
+    "postcss-loader": "^7.2.4"
   }
 }
