fix color and fonts stories

--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run generate-theme && next dev",
+    "dev": "npm run theme && next dev",
     "lint": "next lint && tsc --noEmit",
-    "build": "npm run generate-theme && npm test && next build && npm run build-cms",
-    "start": "npm run generate-theme && next start",
+    "build": "npm run theme && npm test && next build && npm run build-cms",
+    "start": "npm run theme && next start",
     "cms": "sanity dev",
     "build-cms": "sanity build public/cms -y",
-    "storybook": "npm run generate-theme && start-storybook -p 6006",
-    "build-storybook": "npm run generate-theme && build-storybook -o public/storybook --disable-telemetry",
+    "storybook": "npm run theme && start-storybook -p 6006",
+    "build-storybook": "npm run theme && build-storybook -o public/storybook --disable-telemetry",
     "create-dialog": "sanity exec ./cli/create-dialog -- --write",
     "create-page": "sanity exec ./cli/create-page -- --write",
     "create-block": "sanity exec ./cli/create-block -- --write",
     "create-module": "echo \"Modules are now called blocks. Use yarn create-block instead.\"",
-    "generate-theme": "sanity exec ./cli/theme/generate.ts",
+    "theme": "sanity exec ./cli/theme/generate.ts",
     "test-cli": "NODE_ENV=test npx jest ./cli/ ",
     "test": "NODE_ENV=test jest",
     "test-watch": "jest --watch"
