--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "get-youtube-id": "^1.0.1",
     "groq": "^2.33.2",
     "html2canvas": "^1.4.1",
+    "iframe-resizer-react": "^1.1.0",
     "next": "13.1.1",
     "next-sanity": "^4.0.4",
     "next-seo": "^5.15.0",
