--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
+    "flowbite-typography": "^1.0.3",
     "get-youtube-id": "^1.0.1",
     "groq": "^2.33.2",
     "html2canvas": "^1.4.1",
@@ -75,6 +76,7 @@
     "react-gtm-module": "^2.0.11",
     "react-lite-youtube-embed": "^2.3.52",
     "react-query": "^3.39.2",
+    "react-share": "^4.4.1",
     "reakit": "^1.3.11",
     "sanity": "^3.8.3",
     "sanity-plugin-media": "^2.0.4",
