--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "postcss": "^8.4.20",
     "postcss-selector-parser": "^6.0.11",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-lite-youtube-embed": "^2.3.52",
