--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "storybook-addon-next-router": "^4.0.2",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.1",
     "tinycolor2": "^1.5.2",
     "typescript": "4.9.4",
