--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@radix-ui/react-select": "^1.1.2",
     "@sanity/cli": "^3.1.4",
     "@sanity/client": "^6.1.6",
-    "@sanity/image-url": "^1.0.1",
-    "@sanity/language-filter": "^3.0.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/language-filter": "^3.2.1",
     "@sanity/vision": "^3.15.1",
     "@sanity/webhook": "^2.0.0",
     "@storybook/addon-viewport": "^7.2.2",
@@ -81,7 +81,7 @@
     "reakit": "^1.3.11",
     "sanity": "^3.15.1",
     "sanity-plugin-media": "^2.2.2",
-    "sanity-plugin-mux-input": "2.0.8",
+    "sanity-plugin-mux-input": "^2.2.2",
     "styled-components": "^5.3.6",
     "swiper": "^10.1.0",
     "tailwind-merge": "^1.14.0",
