--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-select": "^1.1.2",
-    "@sanity/cli": "^3.14.5",
+    "@sanity/cli": "3.14.5",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "@sanity/language-filter": "^3.2.1",
