--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@clack/prompts": "^0.4.4",
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
+    "@fancyapps/ui": "^5.0.22",
     "@mux/mux-player-react": "^1.7.1",
     "@portabletext/react": "^2.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
