--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "babel-loader": "^8.3.0",
     "enquirer": "^2.3.6",
     "eslint-plugin-storybook": "^0.6.13",
+    "groq-js": "^1.3.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "next-router-mock": "^0.8.0",
