--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-select": "^1.1.2",
     "@sanity/cli": "^3.1.4",
     "@sanity/client": "^6.1.6",
+    "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/language-filter": "^3.2.1",
     "@sanity/vision": "^3.15.1",
