--- a/package.json
+++ b/package.json
@@ -115,5 +115,8 @@
     "next-router-mock": "^0.8.0",
     "postcss-loader": "^7.2.4",
     "storybook": "^7.2.2"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
