--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "groq": "^2.33.2",
     "html2canvas": "^1.4.1",
     "iframe-resizer-react": "^1.1.0",
-    "next": "13.4.16",
+    "next": "^13.5.3",
     "next-sanity": "^4.0.4",
     "next-seo": "^5.15.0",
     "papaparse": "^5.3.2",
