--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@sanity/cli": "^3.18.1",
     "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
