--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run build-config && next dev",
+    "dev": "npm run build-config && next dev --turbo",
     "lint": "next lint && tsc --noEmit",
     "build": "npm run build-config && if test \"$VERCEL_GIT_REPO_SLUG\" = \"mawla-engine-v2\" ; then npm run build-and-test ; else npm run build-only; fi",
     "build-only": "npm run build-config && next build && npm run build-cms",
@@ -63,7 +63,7 @@
     "groq": "^2.33.2",
     "html2canvas": "^1.4.1",
     "iframe-resizer-react": "^1.1.0",
-    "next": "13.4.16",
+    "next": "14.0.1",
     "next-sanity": "^4.0.4",
     "next-seo": "^5.15.0",
     "papaparse": "^5.3.2",
