--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@clack/prompts": "^0.4.4",
     "@fancyapps/ui": "^5.0.22",
     "@mux/mux-player-react": "^1.7.1",
+    "@next/third-parties": "^14.0.1",
     "@portabletext/react": "^2.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.2",
@@ -72,7 +73,6 @@
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
-    "react-gtm-module": "^2.0.11",
     "react-lite-youtube-embed": "^2.3.52",
     "react-query": "^3.39.2",
     "react-share": "^4.4.1",
