--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
+    "react-lite-youtube-embed": "^2.3.52",
     "react-query": "^3.39.2",
     "react-share": "^4.4.1",
     "reakit": "^1.3.11",
