--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@portabletext/react": "^2.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -77,7 +78,7 @@
     "react-query": "^3.39.2",
     "react-share": "^4.4.1",
     "reakit": "^1.3.11",
-    "sanity": "^3.19.2",
+    "sanity": "^3.19.3",
     "sanity-plugin-media": "^2.2.2",
     "sanity-plugin-mux-input": "^2.2.2",
     "styled-components": "^5.2",
